# Tauron_CSE491

./: README.md
backend/: .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  examples.md  main.py  pyproject.toml  requirements.txt  schemas.md
backend/app/: __init__.py  config.py  main.py
backend/app/api/v1/: __init__.py  dependencies.py
backend/app/core/: __init__.py  app_factory.py  config.py  logging.py  security.py
backend/app/db/: __init__.py  base.py  bootstrap.py  session.py
backend/app/db/models/: __init__.py  asset.py  backtest_results.py  chat_history.py  curated_news.py  example_model.py  knowledge_base.py  market_data.py  ml_models.py  news_data.py  on_chain_metrics.py  predictions.py  scraper_logs.py  technical_indicators.py  user.py  watchlists.py
backend/app/db/repositories/: __init__.py  asset_repository.py  backtest_repository.py  chat_history_repository.py  curated_news_repository.py  example_repository.py  knowledge_base_repository.py  ml_model_repository.py  prediction_repository.py  scraper_log_repository.py  timeseries_repositories.py  user_repository.py  watchlist_repository.py
backend/app/models/request/: __init__.py  auth_request.py  (+2 more)
backend/app/services/: __init__.py  example_service.py
backend/app/utils/: __init__.py  helpers.py  logger.py
backend/app/workers/: __init__.py  news_scraper_worker.py
backend/docker/initdb/: 01-extensions.sql
backend/scripts/: backfill_on_chain_metrics.py
backend/tests/: conftest.py
backend/tests/api/: __init__.py  test_assets.py  test_auth.py  test_backtest_results.py  test_chat_history.py  test_curated_news.py  test_knowledge_base.py  test_market_data.py  test_ml_models.py  test_news_scrape.py  test_on_chain_metrics.py  test_predictions.py  test_root_and_health.py  test_scraper_logs.py  test_technical_indicators.py  test_users.py  test_watchlists.py
scrapers/: .gitignore  main.py  pyproject.toml
scrapers/bloomberg/: bloomberg.py
scrapers/coindesk/: coindesk.py
scrapers/forbes/: forbes.py
scrapers/foreks/: foreks.py
scrapers/investing/: investing.py
scrapers/midas/: midas.py
scrapers/tauron_scrapers/: __init__.py
scrapers/theblock/: theblock.py
scrapers/tradingview/: tradingview.py
(+198 files in other folders)
