[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tauron"
version = "1.0.0"
description = "Tauron — crypto analytics and AI backend (FastAPI, JWT, PostgreSQL)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "PyJWT>=2.8",
    "bcrypt>=4.0",
    "email-validator>=2.0",
    "pgvector>=0.3",
    "psycopg>=3.3.3",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
